--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
         "start": "webpack serve --open"
     },
     "dependencies": {
+        "@material-ui/core": "^4.11.4",
         "history": "^4.10.1",
+        "material-table": "^1.69.3",
+        "material-ui": "^0.20.2",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
+        "react-google-maps": "^9.4.5",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
         "redux": "^4.0.5",
